# ApiWatchman

./: .gitignore
client/: package-lock.json  package.json
client/src/: App.jsx  index.css  main.jsx
client/src/Layouts/: LayoutWithSidebar.jsx
client/src/commmonStyles/: commonStyles.module.css
client/src/components/CustomSlider/: CustomSlider.jsx
client/src/components/MiniTimeHrTimeline/: MiniTimeHrTimeline.jsx  MiniTimeHrTimeline.module.css
client/src/components/Sidebar/: Sidebar.jsx
client/src/newTracker/: NewTracker.jsx  NewTracker.module.css
client/src/pages/monitors/: monitors.jsx  monitors.module.css
client/src/router/: router.jsx
server/: app.py  database.py  models.py  pyproject.toml  queue_processer.py  queue_repo.py  queue_schduler.py
